--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/feedback/feedback",
+    "pages/detail/detail",
     "pages/feedback/about/about",
-    "pages/feedback/form/form",
-    "pages/detail/detail"
+    "pages/feedback/feedback",
+    "pages/feedback/form/form"
   ],
   "window": {
     "backgroundTextStyle": "light",
