--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lin-ui": "^0.9.4"
+    "lin-ui": "^0.9.4",
+    "mina-keyword-highlight": "^1.0.0"
   }
 }
